--- a/custom_components/myhome/manifest.json
+++ b/custom_components/myhome/manifest.json
@@ -6,9 +6,7 @@
   "config_flow": true,
   "documentation": "https://github.com/anotherjulien/MyHOME",
   "issue_tracker": "https://github.com/anotherjulien/MyHOME/issues",
-  "requirements": [
-    "OWNd==0.7.48"
-  ],
+  "requirements": ["git+https://github.com/carferrer/myhome-OWNd.git#OWNd==0.7.48.1"],
   "ssdp": [
     {
       "st": "upnp:rootdevice",
